tests/paczka1/fuzzy1/12097938.err
Error in line 1: iPOkH9qgtI S868 34,8
Error in line 7: pdfUmEWoTO A802 47,5
Error in line 13: H45 A666 81,7
Error in line 19: A666 A802 33,8
Error in line 29: QSOTH6Gf5 S868 79,3
Error in line 30: QSOTH6Gf5 A802 50,5
Error in line 32: QSOTH6Gf5 S762 69,8
